Updated file upload

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,10 +28,6 @@
                   <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
               </ul>
-
-              <div class="m-2">
-                <span id="isAuth"></span>
-              </div>
             </div>
           </div>
         </nav>
@@ -82,7 +78,7 @@
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
 
-  <script src="./js/client.js"></script>
+  <script src="./js/login.js"></script>
 </body>
 
 </html>
