--- a/frontend/index.html
+++ b/frontend/index.html
@@ -78,7 +78,7 @@
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
 
-  <script src="./js/login.js"></script>
+  <script src="../js/login.js"></script>
 </body>
 
 </html>
